# Autonomous-Multi-Agent-Business-Intelligence-System

./: .env.example  .gitignore  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TEST_CHECKLIST.md  FIX_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE6_QUICKSTART.md  PHASE6_SUMMARY.md  PHASE6_TESTING.md  QA_VERIFICATION_REPORT.md  README.md  SYSTEM_OVERVIEW.md  TEST_EXECUTION_SUMMARY.md  UI_IMPLEMENTATION.md  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.ps1
app/: README.md  streamlit_ui.py
app/components/: __init__.py  agent_trace.py  monitoring_dashboard.py
configs/: business_glossary.yaml
data/sample/: .gitkeep
data/schemas/: .gitkeep
docs/: DEPLOYMENT.md  E2E_TEST_GUIDE.md  PHASE1_INTEGRATION.md  PHASE1_SIMULATION.md  PHASE3_ACTION_LOOPS.md  PHASE3_ANALYTICS.md  PHASE4_BOARDROOM.md  PHASE4_MONITORING.md  PHASE6_REPORTING.md
scripts/: create_sample_data.py  index_schemas.py  init_vector_store.py  launch_datagenie.py  rename_project_branding.ps1  rename_project_branding.py  run_tests.py  setup_prod_env.sh  test_phase4_setup.py  websocket_alert_client.py
src/: __init__.py  config.py
src/agents/: correction_agent.py  crewai_manager.py  critic.py  executive.py  insight_agent.py  librarian.py  memory_agent.py  orchestrator.py  planner_agent.py  reporter.py  researcher.py  scientist.py  sentry.py  validator_agent.py  voice_briefer.py
src/api/: __init__.py  main.py  main_crewai.py
src/llm/: __init__.py  claude_service.py  groq_service.py  ollama_service.py  router.py
src/nlp/: __init__.py  intent_classifier.py  ner_extractor.py  preprocessor.py
src/powerbi/: __init__.py
src/rag/: __init__.py  retriever.py  vector_store.py
src/text_to_sql/: __init__.py  generator.py  schema_manager.py  validator.py
src/tools/: code_interpreter.py  enterprise_actions.py  guardrails.py  sql_executor.py
src/ui/: __init__.py  boardroom_app.py  streamlit_app.py
src/utils/: __init__.py
tests/: E2E_QUICK_REFERENCE.md  __init__.py  e2e_master_test.py  run_e2e_tests.py  test_crew_logic.py  test_mock_demo.py  test_phase2_cross_modal.py  test_phase2_simple.py  test_phase3_action_loops.py  test_phase4_boardroom.py  test_security_standalone.py  test_simulation.py  test_sql_accuracy.py
